Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1290,3 +1290,108 @@ Organizations should implement a structured patch management process, use strong
   <summary>Show answer</summary>
 Standards such as ISO 26262 (automotive) and DO-178C (avionics) provide structured risk management, safety certification processes, and regulatory compliance frameworks. This fosters stakeholder confidence, reduces liability exposure, and ensures systems meet rigorous safety and security benchmarks. By embedding these standards into the development lifecycle, managers ensure long-term reliability and protect against operational and legal risks.
 </details>
+
+## 3.5.13 High-Performance Computing systems ##
+
+High-Performance Computing (HPC) systems are designed to solve complex computational problems that require substantial processing power, large-scale storage, and high-speed networking. These systems are used in fields such as scientific research, financial modeling, weather forecasting, artificial intelligence (AI), and large-scale simulations. HPC systems are typically composed of clusters of powerful servers or nodes working in parallel to process vast amounts of data and perform computations at a speed that far exceeds that of typical personal computers or small servers.
+
+One of the key characteristics of HPC systems is their ability to **process large volumes of data and perform complex computations simultaneously**, thanks to their parallel processing architecture. In an HPC system, a large problem is divided into smaller tasks that can be executed concurrently on multiple processors or nodes, significantly reducing computation time. This parallelism is often achieved using clusters of interconnected machines, which function as a single, unified system. HPC systems often rely on specialized hardware such as Graphics Processing Units (GPUs) or accelerators to handle computationally intensive workloads like deep learning, scientific simulations, or big data analytics.
+
+HPC systems are designed to handle a wide **variety of workloads**, including batch processing, real-time analytics, and simulations. These systems often feature massive memory resources, high-speed interconnects (such as InfiniBand or high-speed Ethernet), and large storage systems to handle petabytes of data. The hardware is usually optimized for maximum throughput and minimal latency, making HPC systems well-suited for high-demand, data-intensive tasks.
+
+Another important characteristic of HPC systems is **scalability.** HPC clusters are modular, meaning they can be expanded by adding more nodes or processing units as the computational workload increases. This scalability allows organizations to adjust the system's capacity based on evolving needs. Additionally, these systems are often used in distributed computing environments, where computing resources are spread across multiple locations and managed by centralized scheduling software.
+
+HPC systems also require **advanced software tools** for job scheduling, workload management, and system monitoring. These tools help manage the complex environment of multiple interdependent tasks and ensure efficient resource allocation, load balancing, and fault tolerance.
+
+### Open Questions ###
+
+1. What is the primary purpose of High-Performance Computing (HPC) systems?
+<details>
+  <summary>Show answer</summary>
+HPC systems are designed to solve complex computational problems that require massive processing power, high-speed networking, and large-scale storage. They are used in fields like scientific research, weather forecasting, financial modeling, artificial intelligence, and large-scale simulations where ordinary computers would be too slow or inadequate.
+</details>
+
+2. How do HPC systems achieve high processing speeds?
+<details>
+  <summary>Show answer</summary>
+HPC systems use parallel processing architectures, where large computational problems are divided into smaller tasks that run simultaneously across multiple processors or nodes. This setup, often combined with specialized hardware like GPUs or accelerators, dramatically reduces computation time compared to sequential processing on a single machine.
+</details>
+
+3. Why is scalability an important feature of HPC systems?
+<details>
+  <summary>Show answer</summary>
+Scalability allows HPC clusters to grow by adding more nodes or processors as workloads increase. This modular design helps organizations adapt to evolving computational needs without having to replace the entire system, ensuring long-term flexibility and cost efficiency.
+</details>
+
+4. What role does specialized hardware play in HPC environments?
+<details>
+  <summary>Show answer</summary>
+Specialized hardware such as GPUs, high-speed interconnects (InfiniBand, high-speed Ethernet), and massive memory systems enable HPC environments to handle data-intensive and computation-heavy workloads. These components optimize throughput and minimize latency, making HPC ideal for tasks like deep learning and large-scale simulations.
+</details>
+
+5. Why are advanced software tools critical for managing HPC systems?
+<details>
+  <summary>Show answer</summary>
+HPC systems consist of many interconnected resources running interdependent tasks, which require job schedulers, workload managers, and monitoring tools to allocate resources efficiently, balance loads, ensure fault tolerance, and maximize system performance. Without these tools, managing the complexity of an HPC environment would be inefficient and error-prone.
+</details>
+
+## 3.5.14 Edge Computing Systems ##
+
+Edge computing is a **decentralized computing model that brings computation and data storage closer to the data source, or "edge," of a network**, rather than relying solely on a central data center or cloud-based infrastructure. This paradigm is designed to reduce latency, optimize bandwidth, and improve the performance of applications that require real-time processing. Edge computing is particularly useful in IoT environments, autonomous vehicles, industrial automation, and smart cities, where low-latency data processing is crucial for decision-making.
+
+Edge computing systems are designed to bring computation closer to the data source, which is typically a device or sensor that generates large volumes of data. The primary advantage of edge computing is that it reduces the amount of data that needs to be transmitted to centralized data centers or cloud platforms, thus lowering bandwidth costs and improving overall system responsiveness.
+
+:brain: Edge computing processes data directly on or near the device where it’s generated, minimizing latency by reducing reliance on centralized data centers. **Fog computing** extends this by adding an intermediate layer of distributed nodes between edge devices and the cloud, enabling broader coordination, aggregation, and pre-processing of data across a local network.
+
+In an edge computing setup, computing resources such as processing power, storage, and networking are distributed across a variety of devices, often including sensors, gateways, routers, and embedded systems. These devices perform local data processing, allowing for quicker analysis and decision-making at the edge of the network.
+Edge computing systems also typically feature high levels of real-time data processing. For example, in industrial IoT applications, sensors deployed on machinery may process data locally to detect faults or abnormal behavior, triggering an immediate response to prevent damage. Similarly, in autonomous vehicles, edge computing can enable low-latency processing of sensor data (such as from cameras, LIDAR, and radar) to make real-time driving decisions.
+Scalability is another important characteristic of edge computing systems. The number of devices and endpoints in an edge computing environment can vary greatly, and the system must be able to scale seamlessly as new devices are added to the network. This distributed nature of edge computing allows it to handle massive amounts of data and devices without overloading a central data center.
+
+Common vulnerabilities when securing edge computing environments are depicted in the following table:
+| # | Vulnerability / Risk                         | Key Issues                                                                                                   | Mitigations                                                                                                  |
+|---|----------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|
+| 1 | Insecure Endpoints and Devices               | Limited resources hinder security; devices may be physically exposed and tampered with.                      | Strong authentication, regular patching, secure boot, trusted software loading.                              |
+| 2 | Data Security and Privacy Risks              | Sensitive data processed locally; harder to enforce consistent policies.                                     | Encrypt data at rest/in transit, minimize data collection, configure devices to only process necessary data. |
+| 3 | Insecure Communication and Network           | Public or unsecured networks expose data; multiple protocols increase attack surface.                        | Use TLS/IPsec, secure authenticated protocols, monitor network traffic for anomalies.                         |
+| 4 | Distributed Denial-of-Service (DDoS) Attacks | Edge nodes can be overwhelmed by excessive traffic, disrupting real-time processing.                          | Traffic monitoring, anomaly detection, rate limiting, IP blocking, DDoS protection, redundancy/failover.     |
+| 5 | Limited Security Resources                   | Resource constraints make traditional security tools difficult to deploy or maintain.                        | Lightweight security solutions, secure hardware modules, TEEs, centralized security management.               |
+| 6 | Supply Chain Risks                           | Vulnerabilities can be introduced through compromised third-party components during manufacturing or supply. | Vet suppliers, scan devices pre-deployment, verify firmware/software integrity.                               |
+| 7 | Lack of Centralized Control                   | Distributed devices make enforcing security policies and coordinated responses challenging.                   | Centralized management platforms, consistent policy enforcement, coordinated incident response plans.         |
+
+
+:necktie: consider using edge computing when low latency, real-time processing, or data sovereignty are critical, ensuring security controls—like encryption, authentication, and continuous monitoring—are deployed directly on edge devices and integrated into your enterprise risk management framework.
+
+### Open Questions ###
+
+1. What is edge computing, and why is it important?
+<details>
+  <summary>Show answer</summary>
+Edge computing is a decentralized model that processes and stores data closer to where it’s generated, reducing latency, saving bandwidth, and improving real-time decision-making—critical for IoT, autonomous vehicles, and industrial automation.
+</details>
+
+2. How does edge computing differ from fog computing?
+<details>
+  <summary>Show answer</summary>
+Edge computing handles processing directly on or near devices, while fog computing adds an intermediate layer of distributed nodes between the devices and the cloud to coordinate, aggregate, and pre-process data more broadly.
+</details>
+
+3. What are the main benefits of edge computing for organizations?
+<details>
+  <summary>Show answer</summary>
+It reduces data transfer to central clouds (cutting bandwidth costs), improves responsiveness for time-sensitive applications, and scales easily to handle massive numbers of devices and data sources.
+</details>
+
+4. What security risks are associated with edge computing?
+<details>
+  <summary>Show answer</summary>
+Risks include insecure endpoints, weak data protection, unencrypted communications, vulnerability to DDoS attacks, limited device resources, supply chain tampering, and difficulty enforcing centralized security controls.
+</details>
+
+5. Why are advanced software tools critical for managing HPC systems?
+<details>
+  <summary>Show answer</summary>
+By implementing strong authentication, encryption, secure boot processes, anomaly detection, lightweight security tools, supplier vetting, centralized monitoring platforms, and coordinated incident response plans.
+</details>
+
+## 3.5.15 Virtualized Systems ##
+
