Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1395,3 +1395,26 @@ By implementing strong authentication, encryption, secure boot processes, anomal
 
 ## 3.5.15 Virtualized Systems ##
 
+
+
+:brain: Difference between Elasticity and Scalability:
+
+**Scalability** is the ability of a system to handle increasing workloads by adding resources, either vertically (more powerful servers) or horizontally (more servers). Scalability usually involves planned, gradual growth to meet expected demand.
+
+**Elasticity** is the ability of a system to automatically adjust resources up or down in real time based on current demand, often in a cloud environment. Elasticity emphasizes automatic, dynamic resource allocation to handle sudden spikes or drops.
+
+```mermaid
+graph LR
+    subgraph Scalability
+        A[Start: Normal Load] --> B[Planned Addition of Resources]
+        B --> C[System Handles Higher Load]
+    end
+
+    subgraph Elasticity
+        D[Start: Normal Load] --> E[Automatic Resource Adjustment Based on Demand]
+        E --> F[Scale Up During Spike / Scale Down When Load Decreases]
+    end
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
