Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1404,7 +1404,7 @@ By implementing strong authentication, encryption, secure boot processes, anomal
 **Elasticity** is the ability of a system to automatically adjust resources up or down in real time based on current demand, often in a cloud environment. Elasticity emphasizes automatic, dynamic resource allocation to handle sudden spikes or drops.
 
 ```mermaid
-graph LR
+graph TD
     subgraph Scalability
         A[Start: Normal Load] --> B[Planned Addition of Resources]
         B --> C[System Handles Higher Load]
