Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1410,7 +1410,7 @@ graph TD
     A[Hypervisors] --> B[Type 1 Hypervisor]
     A --> C[Type 2 Hypervisor]
 
-    B --> B1[Runs directly on physical hardware (bare-metal)]
+    B --> B1[Runs directly on physical hardware: bare-metal]
     B --> B2[Examples: VMware ESXi, Microsoft Hyper-V, Xen]
     B --> B3[High performance and efficiency]
     B --> B4[Used in data centers and enterprise environments]
