Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1489,7 +1489,37 @@ To mitigate these risks, cloud providers should implement strong tenant isolatio
 
 7. Complexity of Managing Virtualized Environments. As virtualization adds layers of abstraction, the complexity of managing virtualized environments increases. Administrators need to be well-versed in managing virtual machines, networking, and storage resources. Misconfigurations or oversights in this complex environment can create security gaps, allowing attackers to exploit vulnerabilities. To reduce the complexity of managing virtualized environments, organizations should invest in automation and orchestration tools that streamline the deployment, configuration, and management of virtual machines. Regular security audits and vulnerability assessments should also be conducted to identify and address potential issues before they can be exploited.
 
+### Open Questions ###
 
+1. How does virtualization improve disaster recovery, and why are virtual machine snapshots both beneficial and risky?
+<details>
+  <summary>Show answer</summary>
+Virtualization improves disaster recovery because virtual machines can be backed up and replicated as files, making restoration faster and more flexible. However, VM snapshots pose risks if not secured, as they can contain sensitive data and system configurations that attackers could exploit if improperly stored or accessed.
+</details>
+
+2. In what ways does VM sprawl negatively impact security and resource management in enterprise environments?
+<details>
+  <summary>Show answer</summary>
+VM sprawl leads to unmanaged virtual machines, which can consume excess resources, create licensing cost issues, and expose systems to unpatched vulnerabilities. Unmonitored VMs increase the attack surface and complicate auditing, leading to potential security gaps.
+</details>
+
+3. Explain why hypervisor vulnerabilities are considered more critical than vulnerabilities inside individual virtual machines.
+<details>
+  <summary>Show answer</summary>
+A hypervisor vulnerability can compromise every VM on a host, allowing attackers to bypass isolation mechanisms entirely. In contrast, vulnerabilities inside a single VM generally affect only that VM unless exploited to escalate privileges or perform VM escape.
+</details>
+
+4. How do scalability and elasticity differ in virtualized environments, and which is more suited for unpredictable workloads?
+<details>
+  <summary>Show answer</summary>
+Scalability is planned growth, where resources are added manually or systematically to handle predictable increases in workload. Elasticity is real-time adjustment, automatically scaling resources up or down to handle sudden spikes or drops, making it ideal for unpredictable workloads like web traffic surges.
+</details>
+
+5. What are the trade-offs between Type 1 and Type 2 hypervisors regarding performance, isolation, and use cases?
+<details>
+  <summary>Show answer</summary>
+Type 1 hypervisors (bare-metal) provide higher performance, stronger isolation, and are typically used in production data centers. Type 2 hypervisors (hosted) are easier to install on a desktop OS but introduce an extra software layer, reducing efficiency and security, making them better suited for development or testing environments.
+</details>
 
 
 
