Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -2,7 +2,10 @@
 
 A **Single Point of Failure (SPOF)** is a part of a system that, if it fails, causes the entire system or a significant part of it to stop working. This makes the system vulnerable because there is no backup or redundancy to keep it running.
 For example, imagine a business that relies on a single internet provider. If that provider goes down, the business loses access to the internet, affecting communication, transactions, and daily operations. In contrast, having multiple providers ensures that if one fails, another can take over, reducing downtime.
-SPOFs exist in many areas, including hardware (like a single server hosting a critical application), software (like a single database without replication), and even personnel (like only one person knowing a crucial system's configuration). Eliminating SPOFs often involves redundancy, backup systems, and failover mechanisms to ensure that if one component fails, another takes its place.
+
+:necktie: SPOFs exist in many areas, including hardware (like a single server hosting a critical application), software (like a single database without replication), and even personnel (like only one person knowing a crucial system's configuration). 
+
+:bulb: Eliminating SPOFs often involves redundancy, backup systems, and failover mechanisms to ensure that if one component fails, another takes its place.
 
 :necktie: To minimize the risk of a Single Point of Failure (SPOF), implement redundancy across critical systems, such as using multiple internet providers, servers, and backup processes, ensuring system resilience even in the event of a failure. Regularly audit and reinforce security mechanisms to prevent bypass controls and race conditions, while utilizing countermeasures like synchronization, encryption, and shielding to protect against emanation-based threats.
 
