Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -115,23 +115,11 @@ Client-based systems are systems where the client-side (usually the user's devic
 - Mobile apps
 - Desktop software that connects to a backend API
 
-When you use a system where your computer (the client) connects to a central server, there are two main areas where security issues can arise:
+When your computer (the client) connects to a central server, security issues can appear in two main areas: the client itself and how it communicates with the server.
 
-- Problems with the client application itself – This includes software bugs, outdated applications, or insecure coding practices.
-- Problems with the system running the client – Even if the software is well-designed, it won’t matter if the operating system or hardware is vulnerable.
+On the client side, problems may come from poorly written or outdated software, insecure configurations, or vulnerabilities in the operating system or hardware. Even well-designed software can’t protect data if the underlying system is compromised.
 
-1. Weaknesses in How the Client Operates. Some client security issues come from insecure behaviors or misconfigurations, such as:
-
-- Storing sensitive data in a way that unauthorized users can easily access (e.g., leaving temporary files unprotected on the local system).
-- Running outdated or unpatched software, which leaves known security holes open for attackers.
-
-3. Problems with How the Client Communicates with the Server. Many vulnerabilities arise when the client connects to a remote server but fails to secure that communication properly. Issues include:
-
-- Not verifying the identity of the server – The client could end up connecting to a fake (malicious) server.
-- Not checking or sanitizing data from the server – If the client accepts any data without validation, attackers can send harmful input that may lead to security breaches.
-- Lack of encryption – Without secure protocols, attackers can intercept and read sensitive data.
-- Failure to detect if the data has been tampered with – If no integrity checks are in place, hackers could modify the information in transit.
-- Executing commands from the server without validation – A compromised server could send malicious instructions that the client blindly follows.
+In communication with the server, risks arise when the connection is not properly secured. If the client doesn’t verify the server’s identity, it could connect to a fake one. Without data validation, attackers can send harmful input. Missing encryption allows eavesdropping, and without integrity checks, tampered data can go undetected. Some clients even execute commands from the server without verifying them, opening the door to remote attacks.
 
 Clients often rely on third-party components, such as libraries or plugins (e.g., Java). These add-ons must be included in a vulnerability management program, ensuring that any newly discovered flaws are patched quickly.
 
