Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -121,7 +121,7 @@ On the client side, problems may come from poorly written or outdated software, 
 
 In communication with the server, risks arise when the connection is not properly secured. If the client doesn’t verify the server’s identity, it could connect to a fake one. Without data validation, attackers can send harmful input. Missing encryption allows eavesdropping, and without integrity checks, tampered data can go undetected. Some clients even execute commands from the server without verifying them, opening the door to remote attacks.
 
-Clients often rely on third-party components, such as libraries or plugins (e.g., Java). These add-ons must be included in a vulnerability management program, ensuring that any newly discovered flaws are patched quickly.
+Clients often rely on **third-party components**, such as libraries or plugins (e.g., Java). These add-ons must be included in a vulnerability management program, ensuring that any newly discovered flaws are patched quickly.
 
 For **web-based applications**, browsers must be hardened by following security guidelines from trusted sources like the Center for Internet Security (CIS) and the Defense Information Systems Agency (DISA). Similarly, the underlying operating system should also be secured and kept up to date.
 
@@ -132,9 +132,9 @@ Beyond software security, protecting the client system also means implementing:
 
 When organizations develop their **own client applications**, they must follow secure software development practices to prevent vulnerabilities from being introduced in the first place. A structured development approach, ensures that security is built into the software from the start.
 
-:link: Refer also to chapter 8 TBD
+:link: Refer also to chapter [8.5.1 Security weaknesses and vulnerabilities at the source-code level](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN8%3A%20Software%20Development%20Security/8.5%20-%20Define%20and%20apply%20secure%20coding%20guidelines%20and%20standards.md#851-security-weaknesses-and-vulnerabilities-at-the-source-code-level)
 
-:necktie: Assume the client is hostile — validate everything server-side
+:necktie: Assume the client is hostile — validate everything server-side !
 
 ### Open Questions ###
 
