--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -540,19 +540,15 @@ SaaS refers to cloud-based software that users can access through the internet. 
 
 Characteristics:
 
-- Access via Web Browser: SaaS applications are typically accessed through a browser, allowing users to access the application from any device with an internet connection.
+- **Access via Web Browser:** SaaS applications are typically accessed through a browser, allowing users to access the application from any device with an internet connection.
 
-- Fully Managed: The cloud service provider handles all aspects of the software, including maintenance, updates, and security patches.
+- **Fully Managed:** The cloud service provider handles all aspects of the software, including maintenance, updates, and security patches.
 
-- Subscription Model: SaaS operates on a subscription basis, where users pay for access to the software, often with tiered pricing based on features or usage.
+- **Subscription Model:** SaaS operates on a subscription basis, where users pay for access to the software, often with tiered pricing based on features or usage.
 
-Examples of SaaS:
+Examples of SaaS are Google Workspace (formerly G Suite), Microsoft 365, Salesforce.
 
-- Google Workspace (formerly G Suite)
-- Microsoft 365
-- Salesforce
-
-Vulnerabilities:
+Known vulnerabilities of SaaS are:
 
 - Data Privacy and Compliance Risks: Data stored in the cloud may be subject to various jurisdictional regulations. Organizations must ensure that their cloud provider is compliant with data privacy laws such as GDPR, HIPAA, or CCPA.
 - Limited Control: Since the service is managed by the provider, customers have limited control over updates, security features, and performance, which could result in disruptions or vulnerabilities.
@@ -568,13 +564,9 @@ Characteristics:
 - Scalability and Flexibility: IaaS allows users to scale resources up or down based on demand, providing flexibility for dynamic workloads.
 - Pay-as-you-go: The user only pays for the resources they use, which helps reduce operational costs.
 
-Examples of IaaS:
+Examples of IaaS are Amazon Web Services (AWS), Microsoft Azure, Google Cloud Platform (GCP).
 
-- Amazon Web Services (AWS)
-- Microsoft Azure
-- Google Cloud Platform (GCP)
-
-Vulnerabilities:
+Vulnerabilities of IaaS are:
 
 - Shared Resources: Since IaaS environments are often multi-tenant, there is a risk of data leakage or side-channel attacks from neighboring tenants if proper isolation measures are not in place.
 - Insider Threats: Providers may have access to customer data and systems, creating potential risks if their staff is compromised or malicious.
@@ -590,11 +582,7 @@ Characteristics:
 - Middleware and Databases: In addition to basic compute resources, PaaS typically includes middleware, databases, and other software components that developers can leverage.
 - Developer-Focused: PaaS is designed to streamline the application development lifecycle, from coding to deployment.
 
-Examples of PaaS:
-
-- Google App Engine
-- Heroku
-- Microsoft Azure App Service
+Examples of PaaS are Google App Engine, Heroku, Microsoft Azure App Service.
 
 Vulnerabilities:
 
@@ -622,12 +610,9 @@ Characteristics:
 - Cost-Effective: As the infrastructure is shared, the cost is spread out, making it more affordable for smaller organizations or projects with varying resource needs.
 - Scalability: Public cloud services are highly scalable, enabling organizations to adjust their resource usage based on demand.
 
-Examples of Public Cloud Providers:
-- Amazon Web Services (AWS)
-- Google Cloud Platform (GCP)
-- Microsoft Azure
+Examples of Public Cloud Providers are Amazon Web Services (AWS), Google Cloud Platform (GCP), Microsoft Azure.
 
-Vulnerabilities:
+Vulnerabilities of Public Clouds are:
 
 - Data Security and Privacy Concerns: Storing sensitive data on a shared infrastructure can pose risks if the cloud provider’s security protocols are not robust enough.
 - Limited Control Over Data: Customers have limited control over data security, maintenance, and where their data resides, which could be a concern for compliance.
@@ -643,11 +628,7 @@ Characteristics:
 Customization: Organizations can customize the infrastructure and services based on their specific needs.
 - Increased Security and Control: With greater control over the environment, private clouds are more secure for handling sensitive data.
 
-Examples of Private Cloud Providers:
-
-- VMware Cloud
-- Microsoft Azure Stack
-- OpenStack
+Examples of Private Cloud Providers are VMware Cloud, Microsoft Azure Stack, OpenStack.
 
 Vulnerabilities:
 
@@ -665,7 +646,7 @@ Characteristics:
 - Seamless Integration: The integration of both private and public clouds enables businesses to take advantage of the benefits of both while avoiding the limitations of each.
 - Cost Efficiency: Hybrid clouds allow businesses to optimize costs by leveraging the public cloud for general-purpose services while using the private cloud for sensitive data and operations.
 
-Vulnerabilities:
+Vulnerabilities of hybrid clouds are:
 
 - Complexity in Management: Managing a hybrid environment can be complex due to the need to ensure compatibility between private and public clouds.
 - Data Transfer Risks: Data transferred between public and private clouds can be vulnerable to interception or loss if not adequately encrypted and secured.
